# config/routes.rb
@@ -71,6 +71,9 @@ Rails.application.routes.draw do
       end
       resources :reading_challenges, only: [:index, :create, :update]
       resource :stats, only: [:show]
+      resources :buddy_reads, only: [:index, :create, :show, :update] do
+        resources :messages, only: [:create], controller: "buddy_read_messages"
+      end
     end
 
     get "docs", to: "docs#index"
